[package]
name = "struct_scalpel_proc_macro"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/DragonFighter603/struct_scalpel"
authors = ["DragonFighter603"]
description = "helper crate for struct_scalpel"
license-file = "../LICENSE"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.63"
quote = "1.0.29"
syn = "2.0.22"
venial = "0.5.0"